@@ -34,8 +34,13 @@ search_and_load_file "library file" "ftp-extra.exp" ${boards_dir}
 set_board_info target_install ${target_triplet}
 
 # Load the generic configuration for this board. This will define a basic set
-# of routines needed by the tool to communicate with the board.
-load_generic_config "unix"
+# of routines needed by the tool to communicate with the board. Depends on the
+# tool.
+if { $tool == "gdb" } {
+    load_generic_config "gdbserver"
+} else {
+    load_generic_config "unix"
+}
 
 # No multilib options needed by default.
 process_multilib_options ""
