@@ -42,7 +42,11 @@
 # Make sure we tell people we are being executed.
 send_user "ARC Linux nSim test setup\n"
 
-# Do a generic ARC Linux setup first.
+# Load the generic configuration for this board. This will define a basic set
+# of routines needed by the tool to communicate with the board.
+load_generic_config "unix"
+
+# Do a generic ARC Linux setup.
 search_and_load_file "library file" "arc-linux-generic.exp" ${boards_dir}
 
 # Set up remote target info. We get it from a program, since we may have
@@ -67,3 +71,20 @@ set_board_info ftp_upload_timeout    60
 
 # This simulator is slow.
 set_board_info slow_simulator 1
+
+if { $tool == "gdb" } {
+    # GDB specific setup to enable gdbserver on the target.
+
+    # Use telnet as protocol to spawn gdbserver
+    set_board_info protocol telnet
+    # Standard remote serial protocol
+    set_board_info gdb_protocol "remote"
+    # We can only run one program at a time
+    set_board_info gdb,do_reload_on_run 1
+    # No hardware watchpoints
+    set_board_info gdb,no_hardware_watchpoints 1
+    # IP address of target
+    set_board_info sockethost "$env(ARC_TEST_TARGET):"
+    # The command to use
+    set_board_info gdb_server_prog /bin/gdbserver
+}
